# garage

./: .drone.yml  Cargo.nix  Cargo.toml  Dockerfile  Makefile  default.nix  flake.nix  k2v_test.py
doc/book/cookbook/: real-world.md  reverse-proxy.md
doc/book/reference-manual/: admin-api.md  k2v.md  s3-compatibility.md
doc/book/src/: intro.md
doc/drafts/: admin-api.md  k2v-spec.md
script/: dev-cluster.sh  test-smoke.sh
script/jepsen.garage/: deps.edn  deps.nix
script/telemetry/: grafana-garage-dashboard-prometheus.json
src/api/: Cargo.toml  api_server.rs  error.rs  generic_server.rs  helpers.rs  lib.rs  router_macros.rs  s3_bucket.rs  s3_copy.rs  s3_delete.rs  s3_get.rs  s3_list.rs  s3_post_object.rs  s3_put.rs  s3_router.rs  s3_website.rs  signature.rs  webhooks.rs
src/api/admin/: bucket.rs  (+1 more)
src/block/: Cargo.toml  manager.rs  metrics.rs  rc.rs  repair.rs  resync.rs
src/db/: Cargo.toml  counted_tree_hack.rs  lib.rs  lmdb_adapter.rs  sled_adapter.rs  sqlite_adapter.rs  test.rs
src/garage/: Cargo.toml  admin.rs  cli.rs  repair.rs  server.rs
src/k2v-client/: Cargo.toml  error.rs  lib.rs
src/model/: Cargo.toml  block.rs  bucket_table.rs  garage.rs  index_counter.rs  key_table.rs  lib.rs  migrate.rs
src/rpc/: Cargo.toml  membership.rs  metrics.rs  replication_mode.rs  rpc_helper.rs  system.rs  system_metrics.rs
src/table/: Cargo.toml  data.rs  gc.rs  merkle.rs  metrics.rs  queue.rs  schema.rs  sync.rs  table.rs  util.rs
src/util/: Cargo.toml  config.rs  data.rs  metrics.rs  persister.rs  tranquilizer.rs
src/web/: Cargo.toml  web_server.rs
(+79 files in other folders)
